# Agentic-Todo

./: .env.example  .gitignore  ARCHITECTURE.md  IMPLEMENTATION-GUIDE.md  PHASE-TRANSITION-GUIDE.md  README.md
.specify/memory/: constitution.md
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: database.py  main.py
backend/app/models/: task.py
backend/app/routers/: auth.py  tasks.py
backend/tests/: conftest.py
frontend/: README.md  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/(app)/: layout.tsx  page.tsx
frontend/app/(app)/tasks/: page.tsx
frontend/app/(app)/tasks/[id]/edit/: page.tsx
frontend/app/(app)/tasks/new/: page.tsx
frontend/app/(auth)/signin/: page.tsx
frontend/app/(auth)/signup/: page.tsx
frontend/components/auth/: auth-guard.tsx  signin-form.tsx  signup-form.tsx
frontend/components/tasks/: task-form.tsx  task-item.tsx
frontend/components/ui/: button.tsx
frontend/lib/: auth.ts
specs/001-phase1-console-app/: tasks.md
specs/002-phase2-web-app/: tasks.md
