[project]
name = "naz-todo-backend"
version = "0.1.0"
description = "Phase II Backend - FastAPI Todo Application"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = []

[tool.uv]
dev-dependencies = []

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.black]
line-length = 100
target-version = ['py313']

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
